
syntax = "proto3";
import "shared.proto";
import "google/api/annotations.proto";

option csharp_namespace = "XTC.FMP.MOD.Repository.LIB.Proto";
package xtc.fmp.repository;

// 微服务智能体
service Agent {
    // 创建
    rpc Create(AgentCreateRequest) returns (UuidResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/create",
            body: "*",
          };
    }
    // 更新
    rpc Update(AgentUpdateRequest) returns (UuidResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/update",
            body: "*",
        };
    }
    // 读取
    rpc Retrieve(UuidRequest) returns (AgentRetrieveResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/retrieve",
            body: "*",
        };
    }
    // 删除
    rpc Delete(UuidRequest) returns (UuidResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/delete",
            body: "*",
        };
    }
    // 列举
    rpc List(AgentListRequest) returns (AgentListResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/list",
            body: "*",
        };
    }
    // 搜索
    rpc Search(AgentSearchRequest) returns (AgentListResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/search",
            body: "*",
        };
    }
    // 准备上传
    rpc PrepareUpload(UuidRequest) returns (PrepareUploadResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/prepareupload",
            body: "*",
        };
    }
    // 完成上传
    rpc FlushUpload(UuidRequest) returns (FlushUploadResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/flushupload",
            body: "*",
        };
    }
    // 添加标志
    rpc AddFlag(FlagOperationRequest) returns (FlagOperationResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/addflag",
            body: "*",
        };
    }
    // 移除标志
    rpc RemoveFlag(FlagOperationRequest) returns (FlagOperationResponse) {
        option (google.api.http) = {
            post: "/v1/xtc/repository/agent/removeflag",
            body: "*",
        };
    }
}

// 创建的请求
message AgentCreateRequest {
    string org = 1;  // 组织名
    string name = 2;  // 名称
    string version = 3;  // 版本号
}

// 更新的请求
message AgentUpdateRequest {
    string uuid = 1;  // 唯一识别码
    uint32 port = 2;  // 默认端口号
    repeated string pages = 3; // 可访问的页面列表
}

// 读取的回复
message AgentRetrieveResponse {
    Status status = 1;  // 状态
    AgentEntity agent = 2;  // Agent实体
}

// 列举的请求
message AgentListRequest {
    int64 offset = 1;  // 偏移值
    int64 count = 2;  // 数量
}

// 列举的回复
message AgentListResponse {
    Status status = 1;  // 状态
    int64 total = 2;  // 总数
    repeated AgentEntity agents = 3;  //  Agent实体列表
}

// 搜索的请求
message AgentSearchRequest {
    int64 offset = 1;  // 偏移值
    int64 count = 2;  // 数量
    string org = 3;  // 组织名
    string name = 4;  // 名称
}

